--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="one">
                 <h1 class="one">
                     Oyeeeeee
-                    <span id="name">Anishaaaaaa!</span>
+                    <span id="name">Anishaaa!</span>
                 </h1>
                 <p class="two" id="greetingText">Aj Tor Birthdayyyy!!!! hurrahhh</p>
             </div>
@@ -142,7 +142,7 @@
         </div>
 
         <div class="nine">
-            <p>Okay, now come back and tell me if you liked it.</p>
+            <p>Hello how are you.</p>
             <p id="replay">Or click, if you want to watch it again.</p>
             <p class="last-smile">:)</p>
         </div>
