--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <div class="one">
                 <h1 class="one">
                     Oyeeeeee
+                    Anishaaaaaaa!
                     <span id="name">Anishaaa!</span>
                 </h1>
                 <p class="two" id="greetingText">Aj Tor Birthdayyyy!!!! hurrahhh</p>
