--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="one">
                 <h1 class="one">
                     Oyeeeeee
-                    
+                    Anishaa!!
                 </h1>
                 <p class="two" id="greetingText">Aj Tor Birthdayyyy!!!! 
                     hippp hippp hurrahhhhhh</p>
@@ -54,12 +54,13 @@
                 <p class="idea-2">Tarpor vablam wish to korte hobe.. Git repo search korlam ar chatgpt .. 
                     dekhi try kore notun kichhu</p>
                 <p class="idea-3">
-                    Kichhhhhuuu Special kora jaak<br>
-                    <strong>Special</strong>
+                    Kichhhhhuuu<br>
+                    <strong>Special</strong> 
+                    Kora Jaaak
                 </p>
                 <p class="idea-4">Karonnnnnnn</p>
                 <p class="idea-5">
-                    Tui khubb Special yaarrr !
+                    Tui khubbb Special yaarrr !
                     <span>:)</span>
                 </p>
                 <p class="idea-6">
@@ -146,8 +147,8 @@
         </div>
 
         <div class="nine">
-            <p>Okay, now come back and tell me if you liked it.</p>
-            <p id="replay">Or click, if you want to watch it again.</p>
+            <p>Ami Sobsomoy Achhiiii !!</p>
+            <p id="replay"><a href="https://example.com" target="_blank" class="button">Akhane Click Korr</a></p>
             <p class="last-smile">:)</p>
         </div>
     </div>
