--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="container">
             <div class="one">
                 <h1 class="one">
-                    Oyeeeeee
+                    Oyeee
                     Anishaa!!
                 </h1>
                 <p class="two" id="greetingText">Aj Tor Birthdayyyy!!!! 
