--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
         <div class="nine">
             <p>Ami Sobsomoy Achhiiii !!</p>
-            <p id="replay"><a href="https://example.com" target="_blank" class="button">Akhane Click Korr</a></p>
+            <p id="replay"><a href="https://anishabirthday2.netlify.app/" target="_blank" class="button">Akhane Click Korr</a></p>
             <p class="last-smile">:)</p>
         </div>
     </div>
