--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
-  <title>Happy Birthday!!! :)</title>
+  <title>Anisha Happy Birthday!!! :)</title>
   <!-- Google Font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -72,8 +72,11 @@
             <img src="./img/anisha.jpg" alt="profile" class="profile-picture" id="imagePath"/>
             <!-- <img src="img/hat.svg" alt="hat" class="hat" /> -->
             <div class="wish">
-                <h3 class="wish-hbd">Happy Birthday!!!</h3>
-                <h5 id="wishText">Khub Khub Valo thakis re!! Enjoy The Day to the fullest;)</h5>
+                <h3 class="wish-hbd">Happy Birthday Anisha!!!</h3>
+                <h5 id="wishText">Khub Khub Valo thakis re!! Enjoy The Day to the fullest:)<br>
+                    (aktu wait hainn next page eo achhe akhni back koris na)
+                </h5>
+                
             </div>
             
         </div>
@@ -147,7 +150,8 @@
         </div>
 
         <div class="nine">
-            <p>Ami Sobsomoy Achhiiii !!</p>
+            <p>Arr ... Ami Sobsomoy Achhiiii !!</p>
+            <p>Son ebar niche oi button ta dekhte pachhis ?</p>
             <p id="replay"><a href="https://anishabirthday2.netlify.app/" target="_blank" class="button">Akhane Click Korr</a></p>
             <p class="last-smile">:)</p>
         </div>
