--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <img src="./img/anisha.jpg" alt="profile" class="profile-picture" id="imagePath"/>
             <!-- <img src="img/hat.svg" alt="hat" class="hat" /> -->
             <div class="wish">
-                <h3 class="wish-hbd">Happy Birthday Anisha!!!</h3>
+                <h3 class="wish-hbd">Happy Birthday!!!</h3>
                 <h5 id="wishText">Khub Khub Valo thakis re!! Enjoy The Day to the fullest:)<br>
                     (aktu wait hainn next page eo achhe akhni back koris na)
                 </h5>
